--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
                     <strong>Kamil Klosowski</strong>
                 </h1>
                 <p class="lead">Student, Web developer, aspiring Data Scientist.</p>
-                <hr class="my-4">
+                <hr class="my-4 w-50">
                 <p></p>
                 <a class="btn btn-secondary btn-lg" id="ctaButton" role="button">Learn more</a>
             </div>
@@ -22,7 +22,7 @@
 
 
 <div>
-    <div class="container body-content rounded mt-5 pt-5 body-shadow" id="mainContent">
+    <div class="container body-content rounded mt-5 pt-3 body-shadow" id="mainContent">
 
         <div class="row">
             <div class="col-lg-6 col-lg-offset-3 text-center mx-auto">
@@ -51,22 +51,66 @@
         </div>
         <hr class="pt-5 mt-5"/>
     </div>
-        
-    <div class="jumbotron w-100 bg-dark" style="height: 600px">
+
+    @* <div class="container body-content py-4 my-5 rounded body-shadow"> *@
+    @*     <div class="row" id="bio"> *@
+    @*             <div class="col-xl-6 col-lg-6 col-md-5 col-sm-12 col-xs-12 how-img"> *@
+    @*                 <img src="images/pic.jpg" class="rounded-circle img-fluid"/> *@
+    @*             </div> *@
+    @*             <div class="col-xl-6 col-lg-6 col-md-7 col-sm-12 col-xs-12"> *@
+    @*                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed sodales quam, vel dignissim libero. Integer turpis ex, accumsan vel interdum sit amet, varius quis metus. Phasellus auctor, nisl in convallis sollicitudin, felis est auctor nisl, vitae lacinia quam leo non lacus. Nunc mi lorem, pulvinar eget ligula nec, interdum ultricies arcu. Nullam sit amet tortor mattis, hendrerit ex quis, elementum dui. Morbi bibendum ut leo vel malesuada. Etiam posuere dui ligula, eget luctus lectus auctor vehicula. Mauris non nisi ullamcorper, posuere ipsum ac, commodo nisi. In consectetur molestie ante, eget molestie elit mattis nec. Phasellus vitae tortor scelerisque justo hendrerit mattis sed ut augue. Sed in mi et diam faucibus mollis. Etiam rutrum luctus tellus et suscipit. Phasellus id consequat leo, vel eleifend elit. *@
+    @* *@
+    @*                     Nulla ornare ante sit amet porta egestas. Ut eu vestibulum ex. Aliquam erat volutpat. Proin hendrerit suscipit risus ut dictum. Aliquam varius convallis metus, a aliquam felis pulvinar eget. Nullam non sollicitudin nunc. Vestibulum a mauris pulvinar, molestie turpis at, tempus urna. Aliquam malesuada, orci nec egestas euismod, leo purus dapibus eros, vitae interdum odio enim ac libero. Donec tristique viverra placerat. Praesent quis ultricies lectus. *@
+    @*             </div> *@
+    @*     </div> *@
+    @*     </div> *@
+    @* </div> *@
+
+
+    <div class="jumbotron w-100 bg-dark">
         <div class="container">
-            <div class="col-lg-6 col-lg-offset-3 text-center mx-auto pt-4">
-                <h2 class="text-light"><span class="ion-minus"></span>A few things about me<span class="ion-minus"></span></h2>
+            <div class="col-lg-8 col-lg-offset-2 text-center mx-auto py-5">
+                <h2 class="text-light"><span class="ion-minus"></span>Technologies I use<span class="ion-minus"></span></h2>
+                    <table class="table table-borderless bg-transparent text-left text-light border-0">
+                        <tr>
+                            <th>Java</th>
+                            <td>Java SE11 & EE8, Spring, Hibernate, JUnit, Android, JavaFX, Swing, Guava</td>
+                        </tr>
+                        <tr>
+                            <th>C#</th>
+                            <td>C# 7, .NET Core 2.1, Entity Framework Core 2.0</td>
+                        </tr>
+                        <tr>
+                            <th>Python</th>
+                            <td>Python 3.7, TensorFlow, Keras, NumPy, Matplotlib, Scikit-Learn, Pandas</td>
+                        </tr>
+                        <tr>
+                            <th>Java</th>
+                            <td>Java SE11 & EE8, Spring, Hibernate, JUnit, Android, JavaFX, Swing, Guava</td>
+                        </tr>                        
+                        <tr>
+                            <th>Databases</th>
+                            <td>MySQL, MSSQL, SQLite</td>
+                        </tr>                       
+                        <tr>
+                            <th>Web</th>
+                            <td>
+                                HTML, CSS, JavaScript, JQuery, Bootstrap
+                            </td>
+                        </tr>
+                    </table>
+
             </div>
         </div>
     </div>
 
     <div class="container body-content py-4 my-5 rounded body-shadow">
         <!--zigzag section-->
-        <div class="row mt-3" id="zigzag">
+        <div class="row" id="zigzag">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-lg-offset-3 text-center mx-auto pt-2">
-                        <h2><span class="ion-minus"></span>Vertical Timeline<span class="ion-minus"></span></h2>
+                        <h2><span class="ion-minus"></span>My Education<span class="ion-minus"></span></h2>
                     </div>
                 </div>
                 <!--first section-->
@@ -75,8 +119,8 @@
                         <div class="circle font-weight-bold">1</div>
                     </div>
                     <div class="col-6">
-                        <h5>Fully Responsive</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.</p>
+                        <h5>Technical School of Communications in Cracow (2012-2016)</h5>
+                        <p>Computer technician diploma obtained after finishing a four-year technical school, consisting of three separate certificates: E.12 Computer Assembly, E.13 Network Administration and E.14 Web Development. (Comparable to NVQ3) </p>
                     </div>
                 </div>
                 <!--path between 1-2-->
@@ -94,8 +138,8 @@
                 <!--second section-->
                 <div class="row align-items-center justify-content-end how-it-works d-flex">
                     <div class="col-6 text-right">
-                        <h5>Using Bootstrap</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.</p>
+                        <h5>Jagiellonian University .NET Development Course organized by Microsoft (2014-2015)</h5>
+                        <p>Junior .Net Developer certificate obtained after a one-year course organized by Microsoft at Jagiellonian University. Course revolved around both desktop and web development using C#, WPF and ASP.NET.</p>
                     </div>
                     <div class="col-2 text-center full d-inline-flex justify-content-center align-items-center">
                         <div class="circle font-weight-bold">2</div>
@@ -119,14 +163,14 @@
                         <div class="circle font-weight-bold">3</div>
                     </div>
                     <div class="col-6">
-                        <h5>Now with Pug and Sass</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.</p>
+                        <h5>Swansea University – M.Eng. Computing (2016-2020)</h5>
+                        <p>Four year degree in software engineering</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        
+
     </div>
 
     <div class="jumbotron pb-0 mb-0 w-100 bg-dark">
@@ -135,10 +179,10 @@
                 <h2 class="text-light mb-0"><span class="ion-minus"></span>Contact<span class="ion-minus"></span></h2>
             </div>
             <section class="divided clearfix bg-dark text-light">
-                <div class="container">
-                    <div class="row py-5">
-                        <div class="col col-12 col-sm-12 col-md-6 p-lg-5">
-                            <div class="p-5">
+                <div class="container p-0">
+                    <div class="row py-3">
+                        <div class="col col-12 col-sm-12 col-md-6 py-4 p-lg-5 p-xl-5">
+                            <div class="p-3 p-md-5 p-lg-5 p-xl-5">
                                 <form action="#" method="post">
                                     <div class="form-group">
                                         <label for="contactEmail">Your email</label>
@@ -153,9 +197,9 @@
                             </div>
                         </div>
                         <div class="versus">OR</div>
-                        <div class="col col-12 col-sm-12 col-md-6 p-lg-5">
-                            <div class="p-5">
-                                <ul id="contactList" class="list-group list-group-flush">
+                        <div class="col col-12 col-sm-12 col-xs-12 col-md-6 py-4 p-lg-5 p-xl-5">
+                            <div class="p-3 p-md-5 p-lg-5 p-xl-5">
+                                <ul id="contactList" class="list-group list-group-flush pt-md-0 pt-lg-0 pt-xl-0">
                                     <li class="list-group-item text-light bg-dark">
                                         <a href="https://www.linkedin.com/in/kklosowski/"><i class="text-light fab fa-lg fa-linkedin pr-3"></i><span>LinkedIn</span></a>
                                     </li>
@@ -163,10 +207,13 @@
                                         <a href="https://github.com/kklosowski"><i class="text-light fab fa-lg fa-github-square pr-3"></i><span>Github</span></a>
                                     </li>
                                     <li class="list-group-item text-light bg-dark">
-                                        <i class="text-light fab fa-lg fa-facebook-square pr-3"></i><span>Facebook</span>
+                                        <a href="https://facebook.com/kamil.artur.klosowski"><i class="text-light fab fa-lg fa-facebook-square pr-3"></i><span>Facebook</span></a>
                                     </li>
                                     <li class="list-group-item text-light bg-dark">
-                                        <i class="text-light fas fa-lg fa-envelope pr-3"></i><span>kamil.klosowski@yahoo.com</span>
+                                        <a href="~/files/Kamil Klosowski - CV.pdf"><i class="text-light fas fa-lg fa-file pr-3"></i><span>Resume</span></a>
+                                    </li>
+                                    <li class="list-group-item text-light bg-dark pr-0 d-flex d-inline-flex">
+                                        <a href="mailto:kamil.klosowski@yahoo.com" class="d-flex d-inline-flex"><i class="text-light fas fa-lg fa-envelope pr-3"></i><span>kamil.klosowski@yahoo.com</span></a>
                                     </li>
                                 </ul>
                             </div>
