--- a/Portfolio/Views/Home/_LayoutIndex.cshtml
+++ b/Portfolio/Views/Home/_LayoutIndex.cshtml
@@ -25,7 +25,7 @@
 
 <nav class="navbar navbar-expand-md navbar-dark mb-0 fixed-top" id="mainNav">
     <div class="transition-helper"></div>
-    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand js-scroll-trigger">Portfolio</a>
+    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand js-scroll-trigger">Klosowski</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -45,6 +45,14 @@
             <li class="nav-item">
                 <a class="nav-link" href="https://www.linkedin.com/in/kklosowski/"><i class="fab fa-2x fa-linkedin"></i></a>
             </li>
+            @{
+                @if (User.IsInRole("Admin"))
+                 {
+                     <li class="nav-item">
+                         <a asp-area="" asp-controller="Admin" asp-action="Index" class="nav-link">Admin Panel</a>
+                     </li>
+                 }
+            }
         </ul>
 
     </div>
