Linguist ignore test

--- a/Portfolio/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Portfolio/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -15,7 +15,7 @@
     <div class="list-group py-0">
         <a asp-page="./Index" class="list-group-item"><span>Profile</span></a>
         <a asp-page="./ChangePassword" class="list-group-item"><span>Change Password</span></a>
-        <a asp-page="./PersonalData" class="list-group-item"><span>Posts</span></a>
+        <a asp-page="./PersonalData" class="list-group-item"><span>Personal Data</span></a>
     </div>
     
 
