--- a/Portfolio/Views/User/All.cshtml
+++ b/Portfolio/Views/User/All.cshtml
@@ -35,26 +35,26 @@
             </td>
         </tr>
     }
-    <tr scope="row">
-        <form>
-            <td class="form-group">
-                <input type="text" class="form-control">
-            </td>
-            <td class="form-group">
-                <input class="form-control" />
-            </td>
-            <td class="form-group">
-                <input type="text" class="form-control"></input>
-            </td>
-        </form>
-        <td colspan="4" class="text-right">
-            <div class="btn-group" role="group">
-                <a class="btn btn-secondary" href="" class="nav-link pr-0">
-                    Add new user
-                </a>
-            </div>
-        </td>
-    </tr>
+    @* <tr scope="row"> *@
+    @*     <form> *@
+    @*         <td class="form-group"> *@
+    @*             <input type="text" class="form-control"> *@
+    @*         </td> *@
+    @*         <td class="form-group"> *@
+    @*             <input class="form-control" /> *@
+    @*         </td> *@
+    @*         <td class="form-group"> *@
+    @*             <input type="text" class="form-control"></input> *@
+    @*         </td> *@
+    @*     </form> *@
+    @*     <td colspan="4" class="text-right"> *@
+    @*         <div class="btn-group" role="group"> *@
+    @*             <a class="btn btn-secondary" href="" class="nav-link pr-0"> *@
+    @*                 Add new user *@
+    @*             </a> *@
+    @*         </div> *@
+    @*     </td> *@
+    @* </tr> *@
     </tbody>
     
 
