--- a/Portfolio/Views/Project/Create.cshtml
+++ b/Portfolio/Views/Project/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<form asp-action="Create" >
+<form asp-action="Create" method="post">
     <div class="form-group">
         <label asp-for="Title">Project Title</label>
         <input asp-for="Title" type="text" class="form-control">
