--- a/Portfolio/Views/Blog/Write.cshtml
+++ b/Portfolio/Views/Blog/Write.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Post
 
 
-<form asp-action="Write">
+<form asp-action="Write" method="post">
     <div class="form-group">
         <label asp-for="Title">Project Title</label>
         <input asp-for="Title" type="text" class="form-control">
