--- a/Portfolio/Views/Home/_LayoutIndex.cshtml
+++ b/Portfolio/Views/Home/_LayoutIndex.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>@ViewData["Title"] - Portfolio</title>
+    <title>Klosowski - Portfolio</title>
 
     <environment include="Development, Production">
         <link rel="stylesheet" href="~/lib/twitter-bootstrap/css/bootstrap.css"/>
