--- a/Portfolio/Views/Project/Delete.cshtml
+++ b/Portfolio/Views/Project/Delete.cshtml
@@ -5,7 +5,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <form asp-action="Delete">
+    <form asp-action="Delete" method="post">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-action="Index">Back to List</a>
