--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>@ViewData["Title"] - Portfolio</title>
+    <title>Klosowski - Portfolio</title>
 
     <environment include="Development, Production">
         <link rel="stylesheet" href="~/lib/twitter-bootstrap/css/bootstrap.css"/>
@@ -11,12 +11,7 @@
         <link rel="stylesheet" href="~/lib/sceditor/minified/themes/default.min.css" />
         <link rel="stylesheet" href="~/lib/sceditor/minified/themes/modern.min.css" />
     </environment>
-    @* <environment exclude="Development, Production"> *@
-    @*     <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/4.1.1/css/bootstrap.min.css" *@
-    @*           asp-fallback-href="~/lib/twitter-bootstrap/css/bootstrap.min.css" *@
-    @*           asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"/> *@
-    @*     <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true"/> *@
-    @* </environment> *@
+
 </head>
 <body>
 
@@ -39,7 +34,6 @@
     </div>
 </nav>
 
-@* <partial name="_CookieConsentPartial"/> *@
 
 <div class="container body-content rounded mt-5 body-shadow">
     @RenderBody()
@@ -72,24 +66,6 @@
     </script>
 
 </environment>
-@* <environment exclude="Development, Production"> *@
-@*     <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js" *@
-@*             asp-fallback-src="~/lib/jquery/dist/jquery.min.js" *@
-@*             asp-fallback-test="window.jQuery" *@
-@*             crossorigin="anonymous" *@
-@*             integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT"> *@
-@*     </script> *@
-@*     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> *@
-@*     <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/4.1.1/bootstrap.min.js" *@
-@*             asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js" *@
-@*             asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal" *@
-@*             crossorigin="anonymous" *@
-@*             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"> *@
-@*     </script> *@
-@*     <script src="~/js/site.min.js" asp-append-version="true"></script> *@
-@*     <script src="~/js/navbar-shrinker.js" asp-append-version="true"></script> *@
-@* *@
-@* </environment> *@
 
 @RenderSection("Scripts", false)
 </body>
