--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -183,14 +183,18 @@
                     <div class="row py-3">
                         <div class="col col-12 col-sm-12 col-md-6 py-4 p-lg-5 p-xl-5">
                             <div class="p-3 p-md-5 p-lg-5 p-xl-5">
-                                <form action="#" method="post">
+                                <form asp-controller="Home" asp-action="Send" method="post">
                                     <div class="form-group">
-                                        <label for="contactEmail">Your email</label>
-                                        <input type="email" class="form-control" id="contactEmail" placeholder="name@example.com">
+                                        <label for="email">Your email</label>
+                                        <input type="email" class="form-control" name="email" placeholder="name@example.com">
                                     </div>
                                     <div class="form-group">
-                                        <label for="contactContent">Content</label>
-                                        <textarea class="form-control" id="contactContent" rows="3"></textarea>
+                                        <label for="title">Topic</label>
+                                        <input type="text" class="form-control" name="title" placeholder="Topic">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="content">Content</label>
+                                        <textarea class="form-control" name="content" rows="3"></textarea>
                                     </div>
                                     <button type="submit" class="btn btn-secondary mb-2">Send</button>
                                 </form>
