Blog hidden until articles are written, styling tweaks.

--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -48,6 +48,19 @@
                     </div>
                 </div>
             }
+            
+            <div class="card text-center">
+                <img class="card-img-top" src="./images/github_logo.svg" alt="Project Thumbnail">
+                <div class="card-body pb-2">
+                    <h4 class="card-title">Other Projects</h4>
+                    <p class="card-text text-justify p-2">Feel free to check out any of my other projects on my Github page.</p>
+                </div>
+                <div class="card-footer bg-transparent border-0 pt-0 pb-3 my-auto">
+                    <div class="d-flex justify-content-around">
+                        <a class="btn btn-default" href="www.github.com/kklosowski">Github</a>
+                    </div>
+                </div>
+            </div>
         </div>
         <hr class="pt-5 mt-5"/>
     </div>
@@ -74,20 +87,16 @@
                     <table class="table table-borderless bg-transparent text-left text-light border-0">
                         <tr>
                             <th>Java</th>
-                            <td>Java SE11 & EE8, Spring, Hibernate, JUnit, Android, JavaFX, Swing, Guava</td>
+                            <td>Java SE11 & EE8, Spring, Hibernate, JUnit, Android, JavaFX, Maven, Swing </td>
                         </tr>
                         <tr>
                             <th>C#</th>
-                            <td>C# 7, .NET Core 2.1, Entity Framework Core 2.0</td>
+                            <td>C# 7, .NET Core 2.1, Entity Framework Core 2.0, MSTest, Azure</td>
                         </tr>
                         <tr>
                             <th>Python</th>
                             <td>Python 3.7, TensorFlow, Keras, NumPy, Matplotlib, Scikit-Learn, Pandas</td>
-                        </tr>
-                        <tr>
-                            <th>Java</th>
-                            <td>Java SE11 & EE8, Spring, Hibernate, JUnit, Android, JavaFX, Swing, Guava</td>
-                        </tr>                        
+                        </tr>                
                         <tr>
                             <th>Databases</th>
                             <td>MySQL, MSSQL, SQLite</td>
@@ -96,6 +105,12 @@
                             <th>Web</th>
                             <td>
                                 HTML, CSS, JavaScript, JQuery, Bootstrap
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>Other</th>
+                            <td>
+                                Git, Docker
                             </td>
                         </tr>
                     </table>
@@ -164,7 +179,7 @@
                     </div>
                     <div class="col-6">
                         <h5>Swansea University – M.Eng. Computing (2016-2020)</h5>
-                        <p>Four year degree in software engineering</p>
+                        <p>Four year degree in software engineering.</p>
                     </div>
                 </div>
             </div>
@@ -227,7 +242,7 @@
             </section>
             <hr/>
             <footer class="py-3 text-light text-center">
-                <p>&copy; 2018 - kklosowski.com</p>
+                <p>&copy; 2019 - klosowski.azurewebsites.net</p>
             </footer>
         </div>
     </div>
