--- a/Portfolio/Views/Blog/Index.cshtml
+++ b/Portfolio/Views/Blog/Index.cshtml
@@ -2,6 +2,10 @@
 @model List<Post>
 
 <div class="how-section1">
+    @if (Model.Count == 0)
+    {
+        <h1>This part of the website is still being developed. Try to come back later.</h1>
+    }
     @foreach (var post in Model)
     {
         if (post.Published)
@@ -27,11 +31,11 @@
                             <span class="badge badge-light badge-secondary ml-auto">
                                 Author: @(post.IdentityUser.Email)
                             </span>
-                        </div>                                           
+                        </div>
                     </div>
                 </div>
-            </div>    
+            </div>
             <hr/>
-        }        
+        }
     }
 </div>
