--- a/Portfolio/Views/Home/_LayoutIndex.cshtml
+++ b/Portfolio/Views/Home/_LayoutIndex.cshtml
@@ -30,14 +30,16 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="nav navbar-nav">
-            <li class="nav-item">
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link js-scroll-trigger">Home</a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="" asp-controller="Blog" asp-action="Index" class="nav-link js-scroll-trigger">Blog</a>
-            </li>
-        </ul>
+        @* TODO: Write blog articles and uncomment *@
+
+        @* <ul class="nav navbar-nav"> *@
+        @*     <li class="nav-item"> *@
+        @*         <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link js-scroll-trigger">Home</a> *@
+        @*     </li> *@
+        @*     <li class="nav-item"> *@
+        @*         <a asp-area="" asp-controller="Blog" asp-action="Index" class="nav-link js-scroll-trigger">Blog</a> *@
+        @*     </li> *@
+        @* </ul> *@
         <ul class="nav navbar-nav ml-auto text-light icon-list">
             <li class="nav-item">
                 <a class="nav-link" href="https://github.com/kklosowski"><i class="fab fa-2x fa-github-square"></i></a>
@@ -47,11 +49,11 @@
             </li>
             @{
                 @if (User.IsInRole("Admin"))
-                 {
-                     <li class="nav-item">
-                         <a asp-area="" asp-controller="Admin" asp-action="Index" class="nav-link">Admin Panel</a>
-                     </li>
-                 }
+                {
+                    <li class="nav-item">
+                        <a asp-area="" asp-controller="Admin" asp-action="Index" class="nav-link">Admin Panel</a>
+                    </li>
+                }
             }
         </ul>
 
