--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                 <a asp-area="" asp-controller="Blog" asp-action="Index" class="nav-link js-scroll-trigger">Blog</a>
             </li>
         </ul>
-        <partial name="_LoginPartial" />
+        <partial name="_LoginPartial"/>
     </div>
 </nav>
 
@@ -39,7 +39,7 @@
     @RenderBody()
     <hr/>
     <footer>
-        <p>&copy; 2018 - kklosowski.com</p>
+        <p>&copy; 2019 - klosowski.azurewebsites.net</p>
     </footer>
 </div>
 
