--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
                 <h1 class="display-3">
                     <strong>Kamil Klosowski</strong>
                 </h1>
-                <p class="lead">Student, Web developer, aspiring Data Scientist.</p>
+                <p class="lead">Full Stack Web Developer, enthusiast Data Scientist.</p>
                 <hr class="my-4 w-50">
                 <p></p>
                 <a class="btn btn-secondary btn-lg" id="ctaButton" role="button">Learn more</a>
@@ -65,20 +65,6 @@
         <hr class="pt-5 mt-5"/>
     </div>
 
-    @* <div class="container body-content py-4 my-5 rounded body-shadow"> *@
-    @*     <div class="row" id="bio"> *@
-    @*             <div class="col-xl-6 col-lg-6 col-md-5 col-sm-12 col-xs-12 how-img"> *@
-    @*                 <img src="images/pic.jpg" class="rounded-circle img-fluid"/> *@
-    @*             </div> *@
-    @*             <div class="col-xl-6 col-lg-6 col-md-7 col-sm-12 col-xs-12"> *@
-    @*                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed sodales quam, vel dignissim libero. Integer turpis ex, accumsan vel interdum sit amet, varius quis metus. Phasellus auctor, nisl in convallis sollicitudin, felis est auctor nisl, vitae lacinia quam leo non lacus. Nunc mi lorem, pulvinar eget ligula nec, interdum ultricies arcu. Nullam sit amet tortor mattis, hendrerit ex quis, elementum dui. Morbi bibendum ut leo vel malesuada. Etiam posuere dui ligula, eget luctus lectus auctor vehicula. Mauris non nisi ullamcorper, posuere ipsum ac, commodo nisi. In consectetur molestie ante, eget molestie elit mattis nec. Phasellus vitae tortor scelerisque justo hendrerit mattis sed ut augue. Sed in mi et diam faucibus mollis. Etiam rutrum luctus tellus et suscipit. Phasellus id consequat leo, vel eleifend elit. *@
-    @* *@
-    @*                     Nulla ornare ante sit amet porta egestas. Ut eu vestibulum ex. Aliquam erat volutpat. Proin hendrerit suscipit risus ut dictum. Aliquam varius convallis metus, a aliquam felis pulvinar eget. Nullam non sollicitudin nunc. Vestibulum a mauris pulvinar, molestie turpis at, tempus urna. Aliquam malesuada, orci nec egestas euismod, leo purus dapibus eros, vitae interdum odio enim ac libero. Donec tristique viverra placerat. Praesent quis ultricies lectus. *@
-    @*             </div> *@
-    @*     </div> *@
-    @*     </div> *@
-    @* </div> *@
-
 
     <div class="jumbotron w-100 bg-dark">
         <div class="container">
@@ -86,31 +72,32 @@
                 <h2 class="text-light"><span class="ion-minus"></span>Technologies I use<span class="ion-minus"></span></h2>
                     <table class="table table-borderless bg-transparent text-left text-light border-0">
                         <tr>
+                            <th>Front End</th>
+                            <td>
+                                HTML, CSS, SASS, JavaScript ESNext, JQuery, Bootstrap, React, Redux, ContextAPI, Web UI/UX Design, Adobe XD
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>C#</th>
+                            <td>C# 8, .NET Core 2.2, Entity Framework Core 2.1, NUnit</td>
+                        </tr>
+                        <tr>
+                            <th>Machine Learning</th>
+                            <td>Python 3.7, TensorFlow, Keras, NumPy, Matplotlib, Scikit-Learn, Pandas</td>
+                        </tr>        
+                        <tr>
                             <th>Java</th>
                             <td>Java SE11 & EE8, Spring, Hibernate, JUnit, Android, JavaFX, Maven, Swing </td>
                         </tr>
                         <tr>
-                            <th>C#</th>
-                            <td>C# 7, .NET Core 2.1, Entity Framework Core 2.0, MSTest, Azure</td>
-                        </tr>
-                        <tr>
-                            <th>Python</th>
-                            <td>Python 3.7, TensorFlow, Keras, NumPy, Matplotlib, Scikit-Learn, Pandas</td>
-                        </tr>                
-                        <tr>
                             <th>Databases</th>
                             <td>MySQL, MSSQL, SQLite</td>
                         </tr>                       
+
                         <tr>
-                            <th>Web</th>
+                            <th>DevOps</th>
                             <td>
-                                HTML, CSS, JavaScript, JQuery, Bootstrap
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>Other</th>
-                            <td>
-                                Git, Docker
+                                Git, Docker, Kubernetes, TeamCity, Azure, AWS 
                             </td>
                         </tr>
                     </table>
@@ -178,8 +165,8 @@
                         <div class="circle font-weight-bold">3</div>
                     </div>
                     <div class="col-6">
-                        <h5>Swansea University – M.Eng. Computing (2016-2020)</h5>
-                        <p>Four year degree in software engineering.</p>
+                        <h5>Swansea University – BSc. Software Engineering</h5>
+                        <p>First Class Honours Degree</p>
                     </div>
                 </div>
             </div>
